tests/neg/i16072.scala

enum Oops_:
  case Z // error // error expected { and }
